Add Test Configurations
Add Test configurations for future use